# echoes_prelude

./: .gitignore  Cargo.toml  README.md  build.rs  runcc.yml  todo.md  vk_layer_settings.txt
asset_loader/: Cargo.toml
asset_loader/src/: filesystem.rs  lib.rs
asset_loader/tests/: checker.tx  teapot.mesh
assets/shaders/: primary.frag
echoes_prelude/: Cargo.toml
echoes_prelude/src/: main.rs
engine/: Cargo.toml  README.md  build.rs
engine/assets/shaders/: default.frag  default.vert  primary.vert  texture.frag
engine/examples/models/: Cargo.toml
engine/examples/models/src/: main.rs
engine/src/: application.rs  camera.rs  color.rs  config.rs  context.rs  coord.rs  core.rs  engine.rs  event.rs  imgui.rs  lib.rs  logger.rs  math.rs  matrix.rs  mesh.rs  num.rs  platform.rs  profiling.rs  render.rs  renderer.rs  scene.rs  shader.rs  text.rs  vector.rs  window.rs
engine/src/context/: input.rs
engine/src/event/: winit.rs
engine/src/platform/: linux.rs  macos.rs  windows.rs
engine/src/render/: backend.rs  shape.rs
engine/src/render/backend/: vulkan.rs
engine/src/render/backend/vulkan/: buffer.rs  command_pool.rs  descriptors.rs  device.rs  frame.rs  image.rs  imgui_renderer.rs  mesh.rs  pipeline.rs  surface.rs  swapchain.rs
engine/src/render/shape/: triangle.rs
engine/src/renderer/: opengl.rs  vulkan.rs
engine/src/window/: winit.rs
lib/: Cargo.toml  build.rs
lib/assets/meshes/: triangle.mesh  viking_room.mesh
lib/assets/textures/: viking_room.tx
lib/src/: application.rs  config.rs  game.rs  lib.rs  logger.rs  math.rs  profiling.rs  renderer.rs  trace.rs
lib/src/renderer/: vulkan.rs
src/: main.rs
