[workspace]
resolver = "2"
members = [
    "asset_loader",
    "echoes_prelude",
    "engine",
    "engine/examples/models",
    "lib",
]
default-members = ["echoes_prelude", "asset_loader", "engine/examples/models"]

[workspace.dependencies]
anyhow = "1.0.66"
asset_loader = { path = "asset_loader" }
async-trait = "~0.1.64"
bytes = { version = "1.4.0", features = ["serde"] }
derive_more = "~0.99.17"
futures = "~0.3.26"
pix-engine = { path = "engine", features = ["imgui"] }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["fs", "io-util", "rt-multi-thread", "time", "macros"] }
tokio-stream = { version = "~0.1.11", features = ["fs"] }
tracing = { version = "~0.1", features = ["log"] }
tracing-subscriber = { version = "~0.3.7", features = ["env-filter"] }

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.dev-opt]
inherits = "dev"
opt-level = 2

[profile.release]
debug = true
debug-assertions = true

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
