[package]
name = "asset_loader"
authors = ["Luke Petherbridge <me@lukeworks.tech>"]
description = "An asset loading and conversion library for echoes_prelude."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lukexor/echos-prelude.git"
version = "0.1.0"
edition = "2021"

[package.metadata]
msrv = "1.66.0"

[[bin]]
name = "convert_assets"
path = "src/bin/convert.rs"

[dependencies]
anyhow = { workspace = true }
async-compression = { version = "~0.3.15", features = ["tokio", "deflate"] }
async-recursion = "1.0.2"
async-trait = { workspace = true }
bincode = "1.3.3"
bytes = { workspace = true }
derive_more = { workspace = true }
flate2 = "1.0.25"
futures = { workspace = true }
png = "~0.17.6"
serde = { workspace = true }
serde_bytes = "~0.11.9"
thiserror = { workspace = true }
tobj = { version = "3.2.3", features = ["async"] }
tokio = { workspace = true }
tokio-stream = { version = "~0.1.11", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
