[package]
name = "pix-engine"
authors = ["Luke Petherbridge <me@lukeworks.tech>"]
categories = ["game-development", "game-engines", "graphics", "gui", "rendering"]
description = "A cross-platform, graphics/game engine for simple games, visualizations, and graphics applications."
keywords = ["game", "engine", "graphics", "ui", "gui", "rendering"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lukexor/echos-prelude.git"
version = "0.1.0"
edition = "2021"

[package.metadata]
msrv = "1.66.0"

[lib]
crate-type = ["rlib", "dylib"]

[features]
default = ["vulkan"]
vulkan = ["dep:ash"]
opengl = []

[dependencies]
anyhow = "1.0.66"
ash = { version = "~0.37.1", features = ["linked"], optional = true }
bitflags = "1.3.2"
derive_more = "~0.99.17"
env_logger = "~0.10.0"
log = "~0.4.7"
# TODO: Make optional image feature
png = "~0.17.6"
semver = "1.0.16"
serde = { version = "1.0.152", optional = true, features = ["derive"] }
thiserror = "1.0.38"
# TODO: Make optional model feature
tobj = { version = "3.2.3" }
tokio = { version = "1.23.0", features = ["full"] }
winit = "~0.27.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "~0.24.1"
metal = "~0.24.0"
objc  = "~0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "~0.3.5", features = ["windef", "libloaderapi"] }
