[package]
name = "pix-engine"
authors = ["Luke Petherbridge <me@lukeworks.tech>"]
categories = ["game-development", "game-engines", "graphics", "gui", "rendering"]
description = "A cross-platform, graphics/game engine for simple games, visualizations, and graphics applications."
keywords = ["game", "engine", "graphics", "ui", "gui", "rendering"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lukexor/echos-prelude.git"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata]
msrv = "1.66.0"

[lib]
crate-type = ["rlib", "dylib"]

[features]
# TODO: remove imgui from default
default = ["vulkan", "winit", "imgui"]
vulkan = ["dep:ash"]
opengl = []
winit = ["dep:winit"]
glfw = ["dep:glfw"]
track_allocs = []

[dependencies]
anyhow = "1.0.66"
ash = { version = "~0.37.1", features = ["linked"], optional = true }
bitflags = "1.3.2"
cfg-if = "1.0.0"
derive_more = "~0.99.17"
glfw = { version = "~0.49.1", optional = true }
imgui = { version = "~0.10.0", optional = true }
png = "~0.17.6" # TODO: Make optional image feature
semver = "1.0.16"
serde = { version = "1.0.152", optional = true, features = ["derive"] }
thiserror = "1.0.38"
tobj = { version = "3.2.3", features = ["async"] } # TODO: Make optional mesh feature
tokio = { version = "1.23.0", features = ["full"] }
tracing = { version = "~0.1", features = ["log"] }
winit = { version = "~0.27.5", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "~0.24.1"
metal = "~0.24.0"
objc  = "~0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "~0.3.5", features = ["windef", "libloaderapi"] }
