[package]
name = "pix-engine"
authors = ["Luke Petherbridge <me@lukeworks.tech>"]
categories = ["game-development", "game-engines", "graphics", "gui", "rendering"]
description = "A cross-platform, graphics/game engine for simple games, visualizations, and graphics applications."
keywords = ["game", "engine", "graphics", "ui", "gui", "rendering"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lukexor/echos-prelude.git"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata]
msrv = "1.66.0"

[features]
default = []
imgui = ["dep:imgui", "dep:imgui-rs-vulkan-renderer"]
# TODO: track_allocs feature using dhat
track_allocs = []

[dependencies]
anyhow = { workspace = true }
ash = { version = "~0.37.1", features = ["linked"] }
asset_loader = { workspace = true }
bitflags = "1.3.2"
bytes = { workspace = true }
derive_more = { workspace = true }
fnv = "1.0.7"
imgui = { version = "~0.10.0", optional = true }
imgui-rs-vulkan-renderer = { version = "1.8.0", optional = true}
rand = { version = "~0.8.5", optional = true }
semver = "1.0.16"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
winit = "~0.28.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "~0.24.1"
metal = "~0.24.0"
objc  = "~0.2.7"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "~0.3.5", features = ["windef", "libloaderapi"] }
